# ChatCurses

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.scrapex.debug  PLAN.md  README.md  REPORT.md  chatbot  compile_commands.json  example_mcp_config.json  hello_mcp_server.py  mcp_config.json  setup_mcp_servers.sh  test_brave_server.py  test_mcp_brave.cpp  test_mcp_config.cpp  test_mcp_direct.py  test_mcp_simple.cpp  test_mcp_tool_integration.cpp  test_mcp_tools.cpp  test_mcp_ui_notifications.cpp  test_scrapex_bridge.cpp  test_simple_mcp.cpp  test_simple_xai  test_simple_xai.cpp  test_websocketd.sh
include/: AIClientInterface.hpp  AICommon.hpp  BaseAIClient.hpp  BraveSearchTool.hpp  ChatbotApp.hpp  ClaudeAIClient.hpp  CommandLineEditor.hpp  ConfigManager.hpp  GeminiAIClient.hpp  GlobalLogger.hpp  Logger.hpp  MCPClient.hpp  MCPMessage.hpp  MCPNotificationInterface.hpp  MCPPromptManager.hpp  MCPProtocol.hpp  MCPResourceManager.hpp  MCPServerConfig.hpp  MCPServerManager.hpp  MCPService.hpp  MCPToolManager.hpp  MCPToolService.hpp  MessageHandler.hpp  NCursesUI.hpp  OpenAIClient.hpp  ProviderConfig.hpp  RichLogger.hpp  SettingsPanel.hpp  SignalHandler.hpp  XAIClient.hpp  utf8_utils.hpp
src/: ChatbotApp.cpp  ClaudeAIClient.cpp  CommandLineEditor.cpp  ConfigManager.cpp  GeminiAIClient.cpp  Logger.cpp  MCPClient.cpp  MCPMessage.cpp  MCPPromptManager.cpp  MCPProtocol.cpp  MCPResourceManager.cpp  MCPServerConfig.cpp  MCPServerManager.cpp  MCPService.cpp  MCPToolManager.cpp  MCPToolService.cpp  MessageHandler.cpp  NCursesUI.cpp  NCursesUI_destroy_windows.cpp  OpenAIClient.cpp  SettingsPanel.cpp  SettingsPanel_draw_win.cpp  SettingsPanel_draw_win_impl.cpp  SignalHandler.cpp  XAIClient.cpp  main.cpp  utf8_utils.cpp  utf8_utils.hpp
